force-app/main/default/objects/TubeWT__c/TubeWT__c.object-meta.xml
<CustomObject>
    <description>Tube wall thickness</description>
    <label>Tube WT</label>
    <nameField>
        <label>Tube WT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tubes WT</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>