force-app/main/default/objects/TubeWT__c/fields/MaxWT__c.field-meta.xml
<CustomField>
    <fullName>MaxWT__c</fullName>
    <description>Maximum wall thickness in millimeters</description>
    <inlineHelpText>Maximum wall thickness in millimeters</inlineHelpText>
    <label>Max WT (mm)</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>