force-app/main/default/objects/TubeWT__c/fields/MinWT__c.field-meta.xml
<CustomField>
    <fullName>MinWT__c</fullName>
    <description>Minimum wall thickness in millimeters</description>
    <inlineHelpText>Minimum wall thickness in millimeters</inlineHelpText>
    <label>Min WT (mm)</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>