force-app/main/default/objects/TubeWT__c/fields/WT_inch__c.field-meta.xml
<CustomField>
    <fullName>WT_inch__c</fullName>
    <description>Precise wall thickness in inches</description>
    <inlineHelpText>Precise wall thickness in inches</inlineHelpText>
    <label>inch</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>