force-app/main/default/objects/TubeWT__c/fields/WT_mm__c.field-meta.xml
<CustomField>
    <fullName>WT_mm__c</fullName>
    <description>Precise wall thickness in millimeters</description>
    <inlineHelpText>Precise wall thickness in millimeters</inlineHelpText>
    <label>mm</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>