force-app/main/default/objects/TubeWT__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WT_mm__c</columns>
    <columns>WT_inch__c</columns>
    <columns>MinWT__c</columns>
    <columns>MaxWT__c</columns>
    <columns>ID_ERP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>